XML voor toestanden in overeenstemming gebracht met STOP schema's

--- a/simulator/weergave_uitwisselingselector.css
+++ b/simulator/weergave_uitwisselingselector.css
@@ -43,7 +43,7 @@
         text-decoration: underline;
     }
 
-    .uitwisselingselectorknop.geselecteerd {
+    .uitwisselingselectorknop.huidige-uw {
         background-color: #ffe6cc;
     }
 
