--- a/broncode/simulator/weergave_projecten.css
+++ b/broncode/simulator/weergave_projecten.css
@@ -19,23 +19,26 @@
         text-align: center;
     }
 
-    .prj_overzicht tr[data-uw] { /* projectactie die ook een uitwisseling is */
+    .prj_overzicht tr[data-pa] { /* projectactie die selecteerbaar is */
         cursor: pointer;
     }
 
-        .prj_overzicht tr[data-uw]:hover {
+        .prj_overzicht tr[data-pa]:hover {
             background-color: #dae8fc;
         }
 
-    .prj_overzicht tr.huidige-uw { /* geselecteerde projectactie die ook een uitwisseling is */
-        background-color: #ffe6cc;
+    .prj_overzicht tr.huidige-pa { /* geselecteerde projectactie die geen uitwisseling is */
         border: 3px solid #000000;
         cursor: pointer;
     }
 
-        .prj_overzicht tr.huidige-uw:hover {
-            background-color: #dae8fc;
+        .prj_overzicht tr.huidige-pa.uw { /* geselecteerde projectactie die ook uitwisseling is */
+            background-color: #ffe6cc;
         }
+
+            .prj_overzicht tr.huidige-pa.uw:hover {
+                background-color: #dae8fc;
+            }
 
 table.prj_overzicht > tbody > tr > td {
     border: 1px solid #666666;
