--- a/broncode/simulator/applicatie_web_project_invoer.css
+++ b/broncode/simulator/applicatie_web_project_invoer.css
@@ -59,7 +59,105 @@ strong {
     text-align: right;
 }
 
+/*https://www.w3schools.com/howto/howto_css_modals.asp*/
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.modal-close {
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+    .modal-close:hover,
+    .modal-close:focus {
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+#_bgpg_modal_ok {
+    color: #82b366;
+}
+
+    #_bgpg_modal_ok:hover,
+    #_bgpg_modal_ok:focus {
+        color: #00FF00;
+    }
+
+#_bgpg_modal_cancel {
+    color: #b36666;
+}
+
+    #_bgpg_modal_cancel:hover,
+    #_bgpg_modal_cancel:focus {
+        color: #FF0000;
+    }
+
 textarea.tekst {
     width: 75em;
     height: 15em;
 }
+
+input.number2 {
+    width: 3em;
+    text-align: right;
+}
+
+input.number4 {
+    width: 5em;
+    text-align: right;
+}
+
+.voegtoe {
+    font-size: larger;
+    color: #82b366;
+    cursor: pointer;
+}
+
+    .voegtoe:hover,
+    .voegtoe:focus {
+        color: #00FF00;
+    }
+
+.werkbij {
+    font-size: larger;
+    color: #6684b3;
+    cursor: pointer;
+}
+
+    .werkbij:hover,
+    .werkbij:focus {
+        color: #0000FF;
+    }
+
+.verwijder {
+    font-size: larger;
+    content: "\1F5D1";
+    color: #b36666;
+    cursor: pointer;
+}
+
+    .verwijder:hover,
+    .verwijder:focus {
+        color: #FF0000;
+    }
