--- a/broncode/simulator/applicatie_web_project_invoer.css
+++ b/broncode/simulator/applicatie_web_project_invoer.css
@@ -455,6 +455,10 @@ table.activiteiten_overzicht { /* Selectielijst activiteiten */
     }
 
 
+.bgvbd_hidden {
+    display: none;
+}
+
 .bgvbd_naam_l {
     fill: none;
     stroke: #666666;
